--- a/Products/style.css
+++ b/Products/style.css
@@ -1,3 +1,53 @@
+.popup .overlay {
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:100vw;
+  height:100vh;
+  background:rgba(0,0,0,0.7);
+  z-index:1;
+  display:none;
+}
+
+.popup .content {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%) scale(0);
+  background:#fff;
+  width:350px;
+  height: 220px;
+  z-index:2;
+  text-align:center;
+  padding:20px;
+  box-sizing:border-box;
+}
+
+.popup .close-btn{
+  cursor:pointer;
+  position:absolute;
+  right: 20px;
+  top:20px;
+  width:30px;
+  height:30px;
+  background: #222;
+  color: #fff;
+  font-size:25px;
+  font-weight:600;
+  line-height:30px;
+  text-align:center;
+  border-radius:50%;
+  
+}
+
+.popup.active .overlay{
+  display:block;
+}
+
+.popup.active .content{
+  transition:all 300ms ease-in-out;
+  transform:translate(-50%,-50%) scale(1);
+}
 /* Basic Styling */
 html, body {
   height: 100%;
@@ -15,7 +65,7 @@ html, body {
 
 /* Columns */
 .left-column {
-  width: 65%;
+  width: 60%;
   position: relative;
 }
 
@@ -27,10 +77,10 @@ html, body {
 
 /* Left Column */
 .left-column img {
-  width: 75%;
+  width: 70%;
   position: absolute;
-  left: 0;
-  top: 20%;
+  left: 10%;
+  top: 25%;
   opacity: 0;
   transition: all 0.3s ease;
 }
@@ -102,17 +152,17 @@ html, body {
 
 .color-choose input[type="radio"] + label span {
   border: 2px solid #FFFFFF;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
 }
 
-.color-choose input[type="radio"]#white + label span {
-  background-color: #fbfbfb;
+.color-choose input[type="radio"]#red + label span {
+  background-color: #C91524;
 }
 .color-choose input[type="radio"]#blue + label span {
-  background-color: #4275f7;
+  background-color: #314780;
 }
-.color-choose input[type="radio"]#yellow + label span {
-  background-color: rgb(255, 255, 0);
+.color-choose input[type="radio"]#black + label span {
+  background-color: #323232;
 }
 
 .color-choose input[type="radio"]:checked + label span {
@@ -210,7 +260,7 @@ html, body {
   }
 
   .left-column img {
-    width: 300px;
+    width: 70%;
     right: 0;
     top: -65px;
     left: initial;
@@ -219,7 +269,7 @@ html, body {
 
 @media (max-width: 535px) {
   .left-column img {
-    width: 220px;
-    top: -85px;
+    width: 70%;
+    top: 10%;
   }
 }
