--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ html, body {
  }
  
  .color-choose input[type="radio"]:checked + label span {
-   background-image: url(images/check-icn.svg);
+   background-image: url(images/check.svg);
    background-repeat: no-repeat;
    background-position: center;
  }
